broke smth idk what yet

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1,6 +1,22 @@
 [
   {
-    "js": "console.log",
+    "js": "this",
+    "ds": ["das"]
+  },
+  {
+    "js": "log",
     "ds": ["schreibe"]
+  },
+  {
+    "js": "console",
+    "ds": ["konsole"]
+  },
+  {
+    "js": "error",
+    "ds": ["fehler"]
+  },
+  {
+    "js": "warn",
+    "ds": ["warne"]
   }
 ]
